@@ -1,6 +1,6 @@
 Package: odesolve
-Version: 0.5-8
-Date: 2003/01/31
+Version: 0.5-9
+Date: 2004/02/07
 Title: Solvers for Ordinary Differential Equations
 Author: R. Woodrow Setzer <setzer.woodrow@epa.gov>
 Maintainer: R. Woodrow Setzer <setzer.woodrow@epa.gov>
