@@ -39,13 +39,11 @@ lsoda <- function(y, times, func, parms, rtol=1e-6, atol=1e-6,
         stop("`atol' must either be a scaler, or as long as `y'")
     if (length(rtol) > 1 && length(rtol) != n)
         stop("`rtol' must either be a scaler, or as long as `y'")
-    ## patch by thpe
     if (!is.numeric(hmin)) stop("`hmin' must be numeric")
     if (hmin < 0) stop ("`hmin' must be a non-negative value")
     if (!is.numeric(hmax)) stop("`hmax' must be numeric")
     if (hmax < 0) stop ("`hmax' must be a non-negative value")
     if (hmax == Inf) hmax <- 0 # in lsoda.f 0 is internally handled as Inf    
-    ## end patch
     
     ## If func is a character vector, then
     ## copy its value to funcname 
