@@ -1,4 +1,0 @@
-ccl4data                Closed chamber study of CCl4 metabolism by
-                        rats. 
-ccl4data.avg            Closed chamber study of CCl4 metabolism by
-                        rats.
